--- a/ArkManagerApp/ArkManagerApp.csproj
+++ b/ArkManagerApp/ArkManagerApp.csproj
@@ -85,10 +85,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ArkManagerApp\CreateBlueprintGUI.cs" />
+    <Compile Include="ArkManagerApp\CreateBlueprintTab.cs" />
     <Compile Include="ArkManagerApp\CustomArgs.cs" />
-    <Compile Include="ArkManagerApp\MyBlueprintsGUI.cs" />
-    <Compile Include="ArkManagerApp\SearchLogistics.cs" />
+    <Compile Include="ArkManagerApp\MyBlueprintsTab.cs" />
+    <Compile Include="ArkManagerApp\SearchLogic.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
